--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Gilang Anugerah</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+</head>
+<body>
+	<header>
+		<div class="container">
+			<h1><a href="index.html">Lungg</a></h1>
+			<ul>
+				<li class="active"><a href="index.html">HOME</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
+			</ul>
+		</div>
+	</header>
 
+	<!-- banner -->
+	<section class="banner">
+		<h2>IND XXI</h2>
+	</section>
+	<div class="paragraf">
+		<ul>
+			<li>		<p>1. (IND XXI) merupakan salah satu dari sekian banyak website streaming film terbaru/ situs untuk menonton berbagai macam film dari film lama sampai film keluaran terbaru. KLIK TOMBOL LINK DI BAWAH INI UNTUK MENUJU KE HALAMAN IND XXI</p></li>
+		</ul>
+	</div>
+		<div class="link">
+			<div class="container">
+				<ul>
+					<li><a href="http://204.48.22.58/"><i class="fas fa-link"></i></a></li>
+				</ul>
+			</div>
+		</div>
+
+	<!-- banner -->
+	<section class="banner">
+		<h2>Rebahin</h2>
+	</section>
+	<div class="paragraf">
+		<ul>
+			<li>		<p>2. (REBAHIN) sama seperti IND XXI, Rebahin juga merupakan situs streaming film/ situs menonton film. Rebahin juga memiliki tampilan yang hampir sama dengan IND XXI. Rebahin memiliki koleksi film yang cukup lengkap dengan kualitas gambarnya yang sudah FHD. KLIK TOMBOL LINK DI BAWAH UNTUK MENUJU KE HALAMAN REBAHIN</p></li>
+		</ul>
+	</div>
+		<div class="link">
+			<div class="container">
+				<ul>
+					<li><a href="https://85.114.138.56/"><i class="fas fa-link"></i></a></li>
+				</ul>
+			</div>
+		</div>
+		<!-- banner -->
+	<section class="banner">
+		<h2>LK21</h2>
+	</section>
+	<div class="paragraf">
+		<ul>
+			<li>		<p>3. (LK21) merupakan situs film yang bisa dibilang cukup lengkap juga tapi tak jarang ketika kalian mencari film di situs ini filmnya tidak muncul atau tidak ada. KLIK TOMBOL LINK DIBAWAH UNTUK MENUJU KE HALAMAN LK21</p></li>
+		</ul>
+	</div>
+				<div class="link">
+			<div class="container">
+				<ul>
+					<li><a href="http://167.99.71.200/"><i class="fas fa-link"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	<footer>
+		<div class="container">
+			<h3>author @gilangangrah</h3>
+			<h4>PoweredBy
+				<ul>
+					<li><a href="https://www.gamelab.id/">Gamelab.id</a></li>
+				</ul>
+			</h4>
+		</div>
+	</footer>
+</body>
+</html>
